--- a/category.html
+++ b/category.html
@@ -3,6 +3,48 @@
         <title></title>
     </head>
     <body>
-        
+        <div class="category-header">
+            <a href="index.html"><img src="./assets/previous(1).png" alt=""></a>Browse Categories
+        </div>
+        <div class="category-list">
+            Websites, IT & software <img src="" alt=""><br>
+            Writing & Content <img src="" alt=""><br>
+            Press Release <img src="" alt=""><br>
+            News <img src="" alt=""><br>
+            Event <img src="" alt=""><br>
+            Design & Media <img src="" alt=""><br>
+            Sales & Marketing <img src="" alt=""><br>
+            Translation & Languages <img src="" alt=""><br>
+            Other <img src="" alt=""><br>
+        </div>
+        <div class="category-interest">
+            Manage interests <img src="" alt="">
+        </div>
+        <div>
+            Recommended Projects
+        </div>
+        <div>
+            <div class="mark-qualified">
+                QUALIFIED
+            </div>
+            <div class="campaign-title">
+                Insert project title here
+            </div>
+            <div class="requirements">
+                6 Days Left - 18 Participants <br>
+                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+            </div>
+
+            <div class="mark-qualified">
+                QUALIFIED
+            </div>
+            <div class="campaign-title">
+                Insert project title here
+            </div>
+            <div class="requirements">
+                6 Days Left - 18 Participants <br>
+                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+            </div>
+        </div>
     </body>
 </html>
