--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             </div>
             <div class="requirements">
                 6 Days Left - 18 Participants <br>
-                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+                <img src="./assets/facebook.png" alt=""><img src="./assets/instagram.png" alt=""><img src="./assets/twitter.png" alt="">
             </div>
+
             <div class="mark-qualified">
                 QUALIFIED
             </div>
@@ -31,43 +32,49 @@
             </div>
             <div class="requirements">
                 6 Days Left - 18 Participants <br>
-                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+                <img src="./assets/facebook.png" alt=""><img src="./assets/instagram.png" alt=""><img src="./assets/twitter.png" alt="">
             </div>
+
             <div class="campaign-title">
                 Write some articles
             </div>
             <div class="requirements">
                 6 Days Left - 30 Participants <br>
-                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+                <img src="./assets/facebook.png" alt=""><img src="./assets/instagram.png" alt=""><img src="./assets/twitter.png" alt="">
             </div>
+
             <div class="campaign-title">
                 Translate text from English to Chinese
             </div>
             <div class="requirements">
                 30 Days Left - 30 Participants <br>
-                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+                <img src="./assets/facebook.png" alt=""><img src="./assets/instagram.png" alt=""><img src="./assets/twitter.png" alt="">
             </div>
+
             <div class="campaign-title">
                 PR launch for android game
             </div>
             <div class="requirements">
                 30 Days Left - 30 Participants <br>
-                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+                <img src="./assets/facebook.png" alt=""><img src="./assets/instagram.png" alt=""><img src="./assets/twitter.png" alt="">
             </div>
+
             <div class="campaign-title">
                 Game grand launching news
             </div>
             <div class="requirements">
                 30 Days Left - 30 Participants <br>
-                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+                <img src="./assets/facebook.png" alt=""><img src="./assets/instagram.png" alt=""><img src="./assets/twitter.png" alt="">
             </div>
+
             <div class="campaign-title">
                 Content for instagram (Japanese)
             </div>
             <div class="requirements">
                 30 Days Left - 30 Participants <br>
-                <img src="" alt="">
+                <img src="./assets/instagram.png" alt="">
             </div>
+
             <div class="mark-qualified">
                 QUALIFIED
             </div>
@@ -76,7 +83,15 @@
             </div>
             <div class="requirements">
                 6 Days Left - 18 Participants <br>
-                <img src="" alt=""><img src="" alt=""><img src="" alt="">
+                <img src="./assets/facebook.png" alt=""><img src="./assets/instagram.png" alt=""><img src="./assets/twitter.png" alt="">
+            </div>
+            
+            <div class="campaign-title">
+                Insert project title here
+            </div>
+            <div class="requirements">
+                6 Days Left - 18 Participants <br>
+                <img src="./assets/facebook.png" alt=""><img src="./assets/instagram.png" alt=""><img src="./assets/twitter.png" alt="">
             </div>
         </div>
         <div class="footer">
